[gd_scene load_steps=12 format=3 uid="uid://4wrvwk40jiq0"]

[ext_resource type="Script" path="res://player/player.gd" id="1_0jtrh"]
[ext_resource type="PackedScene" uid="uid://cmjql5w1jjml8" path="res://player/player_camera.tscn" id="2_4n2np"]
[ext_resource type="AudioStream" uid="uid://tb6qoilu1ghm" path="res://resources/sounds/GDYN_Punching_Perc_PRO_SH - 2.wav" id="3_n2mbl"]
[ext_resource type="AudioStream" uid="uid://cp5wgukjld5s7" path="res://resources/sounds/GDYN_Punching_Perc_PRO_SH - 5.wav" id="4_eycao"]
[ext_resource type="AudioStream" uid="uid://dvlpmkdmsu34n" path="res://resources/sounds/GDYN_Punching_Perc_PRO_SH - 7.wav" id="5_mtxvd"]
[ext_resource type="AudioStream" uid="uid://b2f71yj7wlfw1" path="res://resources/sounds/pick_up.ogg" id="6_rbyti"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1k6um"]
height = 0.8
radius = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c51jg"]
transparency = 1
albedo_color = Color(0.501961, 0.498039, 0, 0.662745)

[sub_resource type="CylinderMesh" id="CylinderMesh_te3e6"]
material = SubResource("StandardMaterial3D_c51jg")
height = 1.0
radial_segments = 16

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_nmbre"]
streams_count = 3
stream_0/stream = ExtResource("3_n2mbl")
stream_1/stream = ExtResource("4_eycao")
stream_2/stream = ExtResource("5_mtxvd")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_e10qv"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("6_rbyti")

[node name="Player" type="RigidBody3D" groups=["Player"]]
collision_layer = 2
collision_mask = 4
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
contact_monitor = true
max_contacts_reported = 1
linear_damp = 2.0
script = ExtResource("1_0jtrh")

[node name="Camera3D" parent="." instance=ExtResource("2_4n2np")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_1k6um")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CylinderMesh_te3e6")

[node name="DamageTakenTimer" type="Timer" parent="."]
wait_time = 0.85
one_shot = true

[node name="BumpSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_nmbre")
bus = &"Effects"

[node name="Collect" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_e10qv")
pitch_scale = 0.85
bus = &"Effects"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DamageTakenTimer" to="." method="_on_damage_taken_timer_timeout"]
